OPHYK-405 fix palvelukayttaja search